--- a/NEWS
+++ b/NEWS
@@ -84,6 +84,8 @@
 * Dropped using shortcuts to URIs like http://host/ as directories, no
     directory should be in principle used in shortcuts.
 
+* Fixed possible data loss on cross-partition data movement.
+
 
 Changes on 1.2.3 since 1.2.2:
 
