--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+* Fixed 'Launch in Terminal' issue when custom args were ignored.
+
+
 Changes on 1.2.4 since 1.2.3:
 
 * Fixed crash in templates on file that was deleted instantly after
