[SF#1012]Fix crash on non-existent directory listing job.

--- a/AUTHORS
+++ b/AUTHORS
@@ -29,5 +29,8 @@ Jekyll Wu <adaptee@gmail.com>
 David Schalig <github@schalig.org>
 Jonathan Marsden <jmarsden@fastmail.fm>
 Evangelos Foutras <evangelos@foutrelis.com>
+Daniele Forsi <daniele@forsi.it>
+Mario J. Rugiero <mrugiero@gmail.com>
+Tsu Jan <tsujan2000@gmail.com>
 
 Also big thanks to our great translation team.
