[SF#1033] Fix crash after file info job finished on a folder that already left.
This is a race condition issue when folder is disposed from another thread
while update is pending, so job can be queued on already disposed folder.

This also might be a problem in SF #998 (LP #1460083).
It was also reported in BTS #793818 and LP #1303092.

--- a/NEWS
+++ b/NEWS
@@ -31,6 +31,8 @@
 
 * Don't show error message when attempting to rename file into the same.
 
+* Fixed crash after file info job finished on a folder that already left.
+
 
 Changes on 1.2.4 since 1.2.3:
 
