--- a/AUTHORS
+++ b/AUTHORS
@@ -32,5 +32,7 @@ Evangelos Foutras <evangelos@foutrelis.com>
 Daniele Forsi <daniele@forsi.it>
 Mario J. Rugiero <mrugiero@gmail.com>
 Tsu Jan <tsujan2000@gmail.com>
+Nathan Osman <nathan@quickmediasolutions.com>
+Nikita Sirgienko <warquark@gmail.com>
 
 Also big thanks to our great translation team.
