--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Changes on 1.3.1 since 1.3.0:
+
+* Fixed launching menu entries shortcuts on desktop which was broken by making
+    them all executable in 1.3.0 - those should be launchable still.
+
+
 Changes on 1.3.0 since 1.2.5:
 
 * Added emblem support by reading the "metadata::emblems" attribute provided by
