--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,9 @@
-Changes on 1.3.0.1 since 1.3.0:
+Changes on 1.3.0.2 since 1.3.0:
 
 * Fixed launching menu entries shortcuts on desktop which was broken by making
     them all executable in 1.3.0 - those should be launchable still.
 
-* Fixed installing modules into non-standard path: libtool cannot relink them
+* Fixed installing modules into non-standard path: libtool couldn't relink them
     properly.
 
 
