--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@ Changes on 1.3.1 since 1.3.0.2:
 
 * Fixed crash on reload while directory changes (folder might be not ready yet).
 
+* Changed size of large thumbnails to 512 since 256*256 appears to be small on
+    hi-res displays.
+
 
 Changes on 1.3.0.2 since 1.3.0:
 
