--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,10 @@ Changes on 1.3.1 since 1.3.0.2:
 * Changed size of large thumbnails to 512 since 256*256 appears to be small on
     hi-res displays.
 
+* Added application/gzip to archivers.list file next to application/x-gzip.
+
+* Added image/x-compressed-xcf to archivers.list file for xarchiver.
+
 
 Changes on 1.3.0.2 since 1.3.0:
 
