--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-13 00:10+0300\n"
-"PO-Revision-Date: 2020-12-14 12:27+0100\n"
+"PO-Revision-Date: 2020-12-16 12:34+0100\n"
 "Last-Translator: Ingo Brückl <ib@wupperonline.de>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: de\n"
@@ -1083,27 +1083,27 @@ msgstr "Nur Systemverwalter haben die Erlaubnis dies zu tun."
 #: ../src/gtk/fm-gtk-utils.c:924
 #, c-format
 msgid "Do you want to move the file '%s' to trash can?"
-msgstr "Soll die gewählte Datei '%s' in den Papierkorb verschoben werden?"
+msgstr "Soll die Datei »%s« in den Papierkorb verschoben werden?"
 
 #: ../src/gtk/fm-gtk-utils.c:929
 #, c-format
 msgid "Do you want to move the %d selected file to trash can?"
 msgid_plural "Do you want to move the %d selected files to trash can?"
-msgstr[0] "Soll die gewählte Datei %d in den Papierkorb verschoben werden?"
+msgstr[0] "Soll die gewählte Datei in den Papierkorb verschoben werden?"
 msgstr[1] ""
-"Sollen die gewählten Dateien %d in den Papierkorb verschoben werden?"
+"Sollen die %d gewählten Dateien in den Papierkorb verschoben werden?"
 
 #: ../src/gtk/fm-gtk-utils.c:989
 #, c-format
 msgid "Do you want to delete the file '%s'?"
-msgstr "Gewählte Datei '%s' löschen?"
+msgstr "Soll die Datei »%s« gelöscht werden?"
 
 #: ../src/gtk/fm-gtk-utils.c:994
 #, c-format
 msgid "Do you want to delete the %d selected file?"
 msgid_plural "Do you want to delete the %d selected files?"
-msgstr[0] "Gewählte %d Datei löschen?"
-msgstr[1] "Gewählte %d Dateien löschen?"
+msgstr[0] "Soll die gewählte Datei gelöscht werden?"
+msgstr[1] "Sollen die %d gewählten Dateien gelöscht werden?"
 
 #: ../src/gtk/fm-gtk-utils.c:1093
 msgid "Rename File"
