Update French translation
This closes https://sourceforge.net/p/pcmanfm/feature-requests/430.

--- a/po/fr.po
+++ b/po/fr.po
@@ -964,7 +964,7 @@ msgstr "Droits d'accès"
 
 #: ../src/gtk/fm-folder-model.c:194
 msgid "Owner"
-msgstr "Seulement le propriétaire"
+msgstr "Propriétaire"
 
 #: ../src/gtk/fm-folder-model.c:195
 msgid "Modified"
