--- a/AUTHORS
+++ b/AUTHORS
@@ -37,6 +37,6 @@ Nikita Sirgienko <warquark@gmail.com>
 Mahmoud Al-Qudsi <mqudsi@neosmart.net>
 Simon Long <simon@raspberrypi.org>
 wb9688 <wb9688@users.noreply.github.com>
-Ingo Brückl <ib@wupperonline.de>
+Ingo Brückl
 
 Also big thanks to our great translation team.
