--- a/po/ca.po
+++ b/po/ca.po
@@ -7,15 +7,15 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-12-03 13:55+0100\n"
-"PO-Revision-Date: 2018-10-01 14:36+0000\n"
+"PO-Revision-Date: 2025-10-23 10:21+0200\n"
 "Last-Translator: Davidmp <rbndavid@gmail.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: \n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 2.8\n"
+"X-Generator: Poedit 3.6\n"
 "X-POOTLE-MTIME: 1538404584.946748\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
@@ -106,11 +106,11 @@ msgstr "Confirmeu el reemplaçament de fitxers"
 
 #: ../data/ui/ask-rename.glade.h:2
 msgid "_Skip"
-msgstr "_Salta"
+msgstr "_Omet"
 
 #: ../data/ui/ask-rename.glade.h:3
 msgid "_Rename"
-msgstr "_Reanomena"
+msgstr "Ca_nvia'n el nom"
 
 #: ../data/ui/ask-rename.glade.h:4
 msgid "_Overwrite"
@@ -290,11 +290,6 @@ msgstr "Cap"
 
 #. this is a directory access bit - only owner can delete a file from it
 #: ../data/ui/file-prop.glade.h:33
-#, fuzzy
-#| msgctxt ""
-#| "It is a directory access bit - 'sticky' - where only owner can delete a "
-#| "file from it"
-#| msgid "Sticky"
 msgid "Sticky"
 msgstr "Enganxós"
 
@@ -308,9 +303,6 @@ msgstr "Fixa i estableix el GID"
 
 #. this is a file access mode bit - executable files run with permissions of owner
 #: ../data/ui/file-prop.glade.h:37
-#, fuzzy
-#| msgctxt "this is a file access mode bit, also known as 'suid'"
-#| msgid "Set UID"
 msgid "Set UID"
 msgstr "Estableix l'UID"
 
@@ -320,11 +312,6 @@ msgstr "Estableix l'UID i el GID"
 
 #. this is a file access mode - only owner can access the file, for others access is denied
 #: ../data/ui/file-prop.glade.h:40
-#, fuzzy
-#| msgctxt ""
-#| "this is a file access mode - only owner can access the file, for others "
-#| "access is denied"
-#| msgid "Only owner"
 msgid "Only owner"
 msgstr "Només el propietari"
 
@@ -470,11 +457,11 @@ msgstr "<b>Mida del fitxer</b>"
 
 #: ../data/ui/filesearch.glade.h:30
 msgid "_Smaller than:"
-msgstr "Mé_s petit que..."
+msgstr "Mé_s petit de..."
 
 #: ../data/ui/filesearch.glade.h:31
 msgid "_Bigger than:"
-msgstr "Més _gros que..."
+msgstr "Més _gros de..."
 
 #: ../data/ui/filesearch.glade.h:32
 msgid "<b>Last Modified Time</b>"
@@ -491,7 +478,7 @@ msgstr "_Abans de..."
 
 #: ../data/ui/filesearch.glade.h:35
 msgid "L_ater than:"
-msgstr "Més tard qu_e..."
+msgstr "Més t_ard de..."
 
 #: ../data/ui/filesearch.glade.h:36
 msgid "_Properties"
@@ -541,7 +528,7 @@ msgstr "<b>A:</b>"
 #. Preparing to do some file operation (Copy, Move, Delete...)
 #: ../data/ui/progress.glade.h:4
 msgid "Preparing..."
-msgstr "Preparant..."
+msgstr "Es prepara..."
 
 #: ../data/ui/progress.glade.h:5
 msgid "<b>Data transferred:</b>"
@@ -567,7 +554,7 @@ msgstr "Selecció no vàlida"
 #: ../src/base/fm-action.c:811 ../src/job/fm-file-ops-job.c:271
 #: ../src/modules/vfs-menu.c:1176 ../src/modules/vfs-search.c:928
 msgid "Operation not supported"
-msgstr "No s'admet l'operació"
+msgstr "No s'admet l'operació."
 
 #: ../src/base/fm-file-launcher.c:88
 #, c-format
@@ -832,7 +819,7 @@ msgstr "_Afegeix a les adreces d'interès"
 
 #: ../src/gtk/fm-file-menu.c:162
 msgid "_Rename..."
-msgstr "_Canvia el nom..."
+msgstr "Ca_nvia'n el nom..."
 
 #: ../src/gtk/fm-file-menu.c:163
 msgid "Co_mpress..."
@@ -1257,7 +1244,7 @@ msgstr ""
 
 #: ../src/gtk/fm-progress-dlg.c:415 ../src/gtk/fm-progress-dlg.c:564
 msgid "_Pause"
-msgstr "_Pausa"
+msgstr "Interrom_p"
 
 #: ../src/gtk/fm-progress-dlg.c:423
 msgid "_Resume"
@@ -1270,27 +1257,27 @@ msgstr ", "
 #. translators: it is part of "Moving files:" or "Moving xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:618
 msgid "Moving"
-msgstr "Movent"
+msgstr "Es mou"
 
 #. translators: it is part of "Copying files:" or "Copying xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:622
 msgid "Copying"
-msgstr "Copiant"
+msgstr "Es copia"
 
 #. translators: it is part of "Trashing files:" or "Trashing xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:626
 msgid "Trashing"
-msgstr "Reciclant"
+msgstr "Es recicla"
 
 #. translators: it is part of "Deleting files:" or "Deleting xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:630
 msgid "Deleting"
-msgstr "Suprimint"
+msgstr "Se suprimeix"
 
 #. translators: it is part of "Creating link /path/xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:634
 msgid "Creating link"
-msgstr "Creant l'enllaç simbòlic"
+msgstr "Es crea l'enllaç simbòlic"
 
 #. translators: 'In:' string is followed by destination folder path
 #: ../src/gtk/fm-progress-dlg.c:636
@@ -1299,7 +1286,7 @@ msgstr "<b>A:</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:637
 msgid "Creating links to files"
-msgstr "Creant enllaços simbòlics a fitxers"
+msgstr "Es creen enllaços simbòlics a fitxers"
 
 #. translators: it is part of "Changing attributes of xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:644
@@ -1313,7 +1300,7 @@ msgstr "Es canvien els atributs dels fitxers"
 #. translators: it is part of "Restoring files:" or "Restoring xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:651
 msgid "Restoring"
-msgstr "Restaurant"
+msgstr "Es restaura"
 
 #. note to translators: resulting string is such as "Deleting files"
 #: ../src/gtk/fm-progress-dlg.c:661
@@ -1411,7 +1398,7 @@ msgstr "Pestanya de canvis activa"
 #: ../src/job/fm-dir-list-job.c:363
 #, c-format
 msgid "The specified directory '%s' is not valid"
-msgstr "El directori especificat \"%s\" no és vàlid"
+msgstr "El directori especificat %s no és vàlid."
 
 #: ../src/job/fm-file-ops-job.c:529 ../src/job/fm-file-ops-job.c:604
 msgid "Cannot access destination file"
@@ -1425,8 +1412,8 @@ msgstr "No es pot crear un enllaç simbòlic en un sistema de fitxers no nadiu"
 #, c-format
 msgid "Cannot untrash file '%s': original path not known"
 msgstr ""
-"No es pot suprimir de la paperera el fitxer \"%s\": no se'n coneix el camí "
-"original"
+"No es pot suprimir de la paperera el fitxer %s: no se'n coneix el camí "
+"original."
 
 #: ../src/job/fm-file-ops-job-xfer.c:58
 msgid "Destination does not exist"
@@ -1466,7 +1453,7 @@ msgstr "Establir la destinació només es pot fer per a un fitxer únic"
 #: ../src/modules/vfs-menu.c:299
 #, c-format
 msgid "XML file '%s' error (%d:%d): "
-msgstr "Error \"%s\" de fitxer XML (%d:%d): "
+msgstr "Error %s de fitxer XML (%d:%d): "
 
 #: ../src/modules/vfs-menu.c:309
 msgid "XML file doesn't contain Applications root"
@@ -1476,12 +1463,12 @@ msgstr "El fitxer XML no conté aplicacions d'arrel"
 #: ../src/modules/vfs-menu.c:568 ../src/modules/vfs-menu.c:682
 #, c-format
 msgid "Cannot create XML definition for '%s'"
-msgstr "No es pot crear una definició XML per a \"%s\""
+msgstr "No es pot crear una definició XML per a %s"
 
 #: ../src/modules/vfs-menu.c:449 ../src/modules/vfs-menu.c:2634
 #, c-format
 msgid "Menu path '%s' already exists"
-msgstr "El camí de menú \"%s\" ja existeix"
+msgstr "El camí de menú %s ja existeix"
 
 #: ../src/modules/vfs-menu.c:1102 ../src/modules/vfs-menu.c:1407
 #: ../src/modules/vfs-menu.c:1493
@@ -1499,7 +1486,7 @@ msgstr "El nom de l'element del menú no pot estar en blanc."
 #: ../src/modules/vfs-menu.c:1480
 #, c-format
 msgid "Invalid menu directory '%s'"
-msgstr "Directori de menú \"%s\" no vàlid"
+msgstr "Directori de menú %s no vàlid"
 
 #: ../src/modules/vfs-menu.c:1623 ../src/modules/vfs-menu.c:1764
 msgid "Invalid menu item"
@@ -1508,7 +1495,7 @@ msgstr "Element del menú no vàlid"
 #: ../src/modules/vfs-menu.c:1627 ../src/modules/vfs-menu.c:1768
 #, c-format
 msgid "The menu item '%s' doesn't have appropriate entry file"
-msgstr "L'element del menú \"%s\" no té un fitxer d'entrada adequat"
+msgstr "L'element del menú %s no té un fitxer d'entrada adequat"
 
 #: ../src/modules/vfs-menu.c:1790
 msgid "Change hidden status isn't supported for menu directory"
@@ -1517,36 +1504,36 @@ msgstr "El canvi d'estat ocult no s'admet per al directori de menú"
 #: ../src/modules/vfs-menu.c:1948
 #, c-format
 msgid "Setting attribute '%s' not supported"
-msgstr "No s'admet establir l'atribut \"%s\""
+msgstr "No s'admet establir l'atribut %s"
 
 #: ../src/modules/vfs-menu.c:1958
 #, c-format
 msgid "Invalid value for attribute '%s'"
-msgstr "Valor no vàlid per a l'atribut \"%s\""
+msgstr "Valor no vàlid per a l'atribut %s"
 
 #: ../src/modules/vfs-menu.c:1995
 #, c-format
 msgid "The '%s' is a menu directory"
-msgstr "\"%s\" és un directori de menú"
+msgstr "%s és un directori de menú"
 
 #: ../src/modules/vfs-menu.c:1998 ../src/modules/vfs-menu.c:2627
 #, c-format
 msgid "The '%s' isn't a menu item"
-msgstr "\"%s\" no és un element del menú"
+msgstr "%s no és un element del menú"
 
 #: ../src/modules/vfs-menu.c:2022
 #, c-format
 msgid "The '%s' entry file is broken"
-msgstr "El fitxer d'entrada \"%s\" està trencat"
+msgstr "El fitxer d'entrada %s està trencat."
 
 #: ../src/modules/vfs-menu.c:2308 ../src/modules/vfs-menu.c:2397
 #, c-format
 msgid "Cannot create menu item '%s'"
-msgstr "No s'ha pogut crear l'element del menú \"%s\""
+msgstr "No s'ha pogut crear l'element del menú %s."
 
 #: ../src/modules/vfs-menu.c:2542
 msgid "Name of menu directory should not end with \".desktop\""
-msgstr "El nom del directori de menú no hauria d'acabar amb \".desktop\""
+msgstr "El nom del directori de menú no hauria d'acabar amb .desktop."
 
 #: ../src/modules/vfs-menu.c:2587
 msgid "Invalid operation with menu root"
@@ -1795,10 +1782,8 @@ msgid "Blank MRW/W Disc"
 msgstr "Disc MRW/W en blanc"
 
 #: ../src/udisks/g-udisks-device.c:278
-#, fuzzy
-#| msgid "_Audio files"
 msgid "Audio CD"
-msgstr "Fitxers d'_àudio"
+msgstr "CD d'àudio"
 
 #: ../src/udisks/g-udisks-device.c:299
 msgid "Blank Optical Disc"
